# active_ner

./: .deepsource.toml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
anno/: anno.py  learn.py  ner.py  trainer.py  vec.py
app/: settings.py
data/: examples.jsonl
notebooks/: manipulate_db.ipynb  ner.ipynb
